fixing semantic tags

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main role="main" class="flex flex-col items-center text-center bg-white rounded-2xl overflow-hidden shadow-xl w-96">
                 <img src="assets/illustration-hero.svg" alt="hero" class="text-center">
 
-                <div class="text-center bg-white py-10 px-12 rounded-2xl">
+                <article role="article" class="text-center bg-white py-10 px-12 rounded-2xl">
                     <h1 class="font-bold text-2xl text-dark">Order Summary</h1>
                     <p class="font-light text-desaturated pt-4">You can now listen to millions of songs, <br>
                     audiobooks, and podcasts on any device, <br>
@@ -32,14 +32,14 @@
                             <p class="font-bold text-dark">Annual Plan</p>
                             <p class="font-medium text-desaturated">$59.99/year</p>
                         </div>
-                        <a href="#" class="ml-8 text-sm text-bright font-medium underline hover:text-dark">Change</a>
+                        <button href="#" class="ml-8 text-sm text-bright font-medium underline hover:text-dark">Change</button>
                     </div>
 
 <!-- CTA -->      
-                    <a href="#" type="button" class="bg-bright text-white font-bold text-center py-3 px-20 my-4 rounded-lg shadow-xl whitespace-nowrap hover:bg-hover transform hover:-translate-y-0.5 transition active:bg-dark">Proceed to Payment</a>
-                    <a href="#" type="button" class="font-bold text-sm text-center text-desaturated hover:text-dark">Cancel Order</a>
+                    <button href="#" type="button" class="bg-bright text-white font-bold text-center py-3 px-20 my-4 rounded-lg shadow-xl whitespace-nowrap hover:bg-hover transform hover:-translate-y-0.5 transition active:bg-dark">Proceed to Payment</button>
+                    <button href="#" type="button" class="font-bold text-sm text-center text-desaturated hover:text-dark">Cancel Order</button>
                
-                </div>
+                </article role="article">
             </main>
         
         </div>
