erasing href off buttons

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                             <p class="font-bold text-dark">Annual Plan</p>
                             <p class="font-medium text-desaturated">$59.99/year</p>
                         </div>
-                        <button href="#" class="ml-8 text-sm text-bright font-medium underline hover:text-dark">Change</button>
+                        <button class="ml-8 text-sm text-bright font-medium underline hover:text-dark">Change</button>
                     </div>
 
 <!-- CTA -->      
-                    <button href="#" type="button" class="bg-bright text-white font-bold text-center py-3 px-20 my-4 rounded-lg shadow-xl whitespace-nowrap hover:bg-hover transform hover:-translate-y-0.5 transition active:bg-dark">Proceed to Payment</button>
-                    <button href="#" type="button" class="font-bold text-sm text-center text-desaturated hover:text-dark">Cancel Order</button>
+                    <button type="button" class="bg-bright text-white font-bold text-center py-3 px-20 my-4 rounded-lg shadow-xl whitespace-nowrap hover:bg-hover transform hover:-translate-y-0.5 transition active:bg-dark">Proceed to Payment</button>
+                    <button type="button" class="font-bold text-sm text-center text-desaturated hover:text-dark">Cancel Order</button>
                
                 </article role="article">
             </main>
