--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div style="background-image: url('assets/pattern-background-desktop.svg');" class="bg-pale h-screen bg-top bg-no-repeat flex justify-center items-center" >
             
 <!-- card -->
-        <main role="main" class="flex flex-col items-center text-center bg-white rounded-2xl overflow-hidden shadow-xl w-96">
+        <main class="flex flex-col items-center text-center bg-white rounded-2xl overflow-hidden shadow-xl w-96">
                 <img src="assets/illustration-hero.svg" alt="hero" class="text-center">
 
-                <article role="article" class="text-center bg-white py-10 px-12 rounded-2xl">
+                <article class="text-center bg-white py-10 px-12 rounded-2xl">
                     <h1 class="font-bold text-2xl text-dark">Order Summary</h1>
                     <p class="font-light text-desaturated pt-4">You can now listen to millions of songs, <br>
                     audiobooks, and podcasts on any device, <br>
